[gd_scene load_steps=6 format=3 uid="uid://bj26pefpj6bee"]

[ext_resource type="Script" path="res://MenuIniziale/menu.gd" id="1_5qa2v"]
[ext_resource type="Texture2D" uid="uid://bri037kjh52b7" path="res://2Dtexture/eye1.png" id="2_b157p"]
[ext_resource type="Script" path="res://MenuIniziale/pupilPoint.gd" id="3_rxtuy"]
[ext_resource type="Texture2D" uid="uid://cgh2ewx48w255" path="res://2Dtexture/eye2.png" id="4_vncpe"]

[sub_resource type="Theme" id="Theme_2u361"]
Button/styles/disabled = null
Button/styles/normal = null

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_5qa2v")

[node name="Background" type="Sprite2D" parent="."]
rotation = 3.14159
scale = Vector2(651.849, -113.793)
texture = ExtResource("4_vncpe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_2u361")
text = "Play"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Quit"

[node name="EyeFolder" type="Node" parent="."]

[node name="Eye" type="Sprite2D" parent="EyeFolder"]
position = Vector2(832, 384)
scale = Vector2(0.442712, 0.462481)
texture = ExtResource("2_b157p")

[node name="pupilPoint" type="Node2D" parent="EyeFolder/Eye"]
script = ExtResource("3_rxtuy")

[node name="pupil" type="Sprite2D" parent="EyeFolder/Eye/pupilPoint"]
texture = ExtResource("4_vncpe")

[node name="Eye2" type="Sprite2D" parent="EyeFolder"]
position = Vector2(1064, 432)
scale = Vector2(0.442712, 0.462481)
texture = ExtResource("2_b157p")

[node name="pupilPoint" type="Node2D" parent="EyeFolder/Eye2"]
script = ExtResource("3_rxtuy")

[node name="pupil" type="Sprite2D" parent="EyeFolder/Eye2/pupilPoint"]
texture = ExtResource("4_vncpe")

[node name="Eye3" type="Sprite2D" parent="EyeFolder"]
position = Vector2(664, 504)
scale = Vector2(0.442712, 0.462481)
texture = ExtResource("2_b157p")

[node name="pupilPoint" type="Node2D" parent="EyeFolder/Eye3"]
script = ExtResource("3_rxtuy")

[node name="pupil" type="Sprite2D" parent="EyeFolder/Eye3/pupilPoint"]
texture = ExtResource("4_vncpe")

[node name="Eye4" type="Sprite2D" parent="EyeFolder"]
position = Vector2(1192, 640)
scale = Vector2(0.442712, 0.462481)
texture = ExtResource("2_b157p")

[node name="pupilPoint" type="Node2D" parent="EyeFolder/Eye4"]
script = ExtResource("3_rxtuy")

[node name="pupil" type="Sprite2D" parent="EyeFolder/Eye4/pupilPoint"]
texture = ExtResource("4_vncpe")

[node name="Eye5" type="Sprite2D" parent="EyeFolder"]
position = Vector2(784, 648)
scale = Vector2(0.442712, 0.462481)
texture = ExtResource("2_b157p")

[node name="pupilPoint" type="Node2D" parent="EyeFolder/Eye5"]
script = ExtResource("3_rxtuy")

[node name="pupil" type="Sprite2D" parent="EyeFolder/Eye5/pupilPoint"]
texture = ExtResource("4_vncpe")

[node name="Eye6" type="Sprite2D" parent="EyeFolder"]
position = Vector2(1280, 328)
scale = Vector2(0.442712, 0.462481)
texture = ExtResource("2_b157p")

[node name="pupilPoint" type="Node2D" parent="EyeFolder/Eye6"]
script = ExtResource("3_rxtuy")

[node name="pupil" type="Sprite2D" parent="EyeFolder/Eye6/pupilPoint"]
texture = ExtResource("4_vncpe")

[node name="Eye7" type="Sprite2D" parent="EyeFolder"]
position = Vector2(976, 264)
scale = Vector2(0.442712, 0.462481)
texture = ExtResource("2_b157p")

[node name="pupilPoint" type="Node2D" parent="EyeFolder/Eye7"]
script = ExtResource("3_rxtuy")

[node name="pupil" type="Sprite2D" parent="EyeFolder/Eye7/pupilPoint"]
texture = ExtResource("4_vncpe")

[node name="Eye8" type="Sprite2D" parent="EyeFolder"]
position = Vector2(1040, 720)
scale = Vector2(0.442712, 0.462481)
texture = ExtResource("2_b157p")

[node name="pupilPoint" type="Node2D" parent="EyeFolder/Eye8"]
script = ExtResource("3_rxtuy")

[node name="pupil" type="Sprite2D" parent="EyeFolder/Eye8/pupilPoint"]
texture = ExtResource("4_vncpe")

[node name="Eye9" type="Sprite2D" parent="EyeFolder"]
position = Vector2(568, 808)
scale = Vector2(0.442712, 0.462481)
texture = ExtResource("2_b157p")

[node name="pupilPoint" type="Node2D" parent="EyeFolder/Eye9"]
script = ExtResource("3_rxtuy")

[node name="pupil" type="Sprite2D" parent="EyeFolder/Eye9/pupilPoint"]
texture = ExtResource("4_vncpe")

[node name="Eye10" type="Sprite2D" parent="EyeFolder"]
position = Vector2(664, 280)
scale = Vector2(0.442712, 0.462481)
texture = ExtResource("2_b157p")

[node name="pupilPoint" type="Node2D" parent="EyeFolder/Eye10"]
script = ExtResource("3_rxtuy")

[node name="pupil" type="Sprite2D" parent="EyeFolder/Eye10/pupilPoint"]
texture = ExtResource("4_vncpe")

[node name="Eye11" type="Sprite2D" parent="EyeFolder"]
position = Vector2(1368, 520)
scale = Vector2(0.442712, 0.462481)
texture = ExtResource("2_b157p")

[node name="pupilPoint" type="Node2D" parent="EyeFolder/Eye11"]
script = ExtResource("3_rxtuy")

[node name="pupil" type="Sprite2D" parent="EyeFolder/Eye11/pupilPoint"]
texture = ExtResource("4_vncpe")

[node name="Eye12" type="Sprite2D" parent="EyeFolder"]
position = Vector2(1360, 800)
scale = Vector2(0.442712, 0.462481)
texture = ExtResource("2_b157p")

[node name="pupilPoint" type="Node2D" parent="EyeFolder/Eye12"]
script = ExtResource("3_rxtuy")

[node name="pupil" type="Sprite2D" parent="EyeFolder/Eye12/pupilPoint"]
texture = ExtResource("4_vncpe")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.031
autostart = true

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Timer" to="EyeFolder/Eye/pupilPoint" method="_on_timer_timeout"]
